2009-01-04  higepon  <higepon@users.sourceforge.jp>

        * lib/srfi/%3A19.ss (srfi): Added srfi-19 support.

        * UtilityProcedures.cpp (microsecondEx): Added microsecond procedure.
                              (localTzOffsetEx): Added local-tz-offset.

2009-01-03  higepon  <higepon@users.sourceforge.jp>

        * main.cpp (main): Added --loadpath option.

        * Added .mosh.sls prefix file loading.

        * tools/psyntax-r6rs/rev10_to_10/psyntax/main.ss : Use MOSH_LOADPATH for adding load-library-path.

        * When a port is not referenced by any objects, it will be closed automatically.

        * TestingFileBinaryOutputPort.h : Test for closing port automatically.

        * tools/psyntax-r6rs/rev10_to_10/psyntax/expander.ss (guard-macro): Allowed definition in guard body.

2009-01-02  higepon  <higepon@users.sourceforge.jp>

        * Makefile.am : Added R6RS pre-compilation support!.

        * FaslTest.cpp (TEST_F): Added write/read support of EqvHashTable.

        * Fasl.h (scheme): Added write/read support of Record.

        * FaslTest.cpp (TEST_F): Added Test for writing Records. Yeah it's test first.

2009-01-01  higepon  <higepon@users.sourceforge.jp>

        * Changed libtool to 2.2.6a.

        * PortProcedures.cpp (standardErrorPortEx): Added.
                             (standardOutputPortEx): Added.

        * test-data.scm : Added with-input-from-file tests.

        * TestingSignalHandler.cpp (signal_handler): Added stub for test.

2008-12-31  higepon  <higepon@users.sourceforge.jp>

        * TestPort.cpp: Added for Testing port.

        * Makefile.am (mosh_LDADD): Added libmosh.a support.
                                    It decreases the build dependency.

        * StringTextualOutputPort.h (scheme): Break dependency.

        * Arithmetic.cpp (numberToString): Break dependency.

2008-12-30  higepon  <higepon@users.sourceforge.jp>

        * scheme.h (MOSH_FATAL): Added.
